# Project_builder

./: .gitignore  CLAUDE.md  README.md  agents.py  app.py  bedrock_test.py  bedrock_test_apikey.py  config.py  executor.py  org_context.md  planner.py  pyproject.toml  specialists.py  tasks.py  tools.py
.streamlit/: config.toml
memory/: MEMORY.md  project_bedrock_sso.md
pages/: Settings.py
